--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
     "version": "0.0.1",
     "description": "frontend for mishasawangwan.com",
     "scripts": {
-        "build": "clear && webpack --mode production",
-        "build:dev": "clear && webpack --mode development",
-        "purge": "clear && rm -rf ./dist",
-        "start": "clear && webpack-dev-server --config ./webpack.config.js --mode development --open --hot"
+        "build": "webpack --mode production",
+        "build:dev": "webpack --mode development",
+        "purge": "rm -rf ./dist",
+        "start": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot"
     },
     "license": "ISC",
     "babel": {
